Implemented check for first name

--- a/mainHTML.html
+++ b/mainHTML.html
@@ -13,6 +13,7 @@
     <p id="Text1" class="Text1">  Do you wish to play AFL Wordle</p>
     <p id="Text2" class="Text2"></p>
     <p id="Text3" class="Text3"></p>
+    <p id="lineText" class="lineText"></p>
     <p id="firstText" class="firstText"></p>
     <p id="lastText" class="lastText"></p>
     <p id="teamText" class="teamText"></p>
