Added guess limit

--- a/mainHTML.html
+++ b/mainHTML.html
@@ -12,6 +12,9 @@
 <main>
     <p id="Text1" class="Text1">  Do you wish to play AFL Wordle</p>
     <p id="Text2" class="Text2"></p>
+    <input id="fname" style = "display: none;" type="text" name="first-name" value="" placeholder="First Name"/> 
+    <input id="lname" style = "display: none;" type="text" name="last-name" value="" placeholder="Last Name"/>
+    <input id="submitName" type="submit" style = "display: none;" value="Submit" onclick="submitPlayer()">
     <p id="Text3" class="Text3"></p>
     <p id="lineText" class="lineText"></p>
     <p id="firstText" class="firstText"></p>
@@ -25,13 +28,17 @@
     <p id="recruitedText" class="recruitedText"></p>
     <p id="gamesText" class="gamesText"></p>
     <p id="goalsText" class="goalsText"></p>
+    <p id="Text5" class="Text5"></p>
+    <p id="Text4" class="Text4"></p>
+    <p id="Text6" class="Text6"></p>
+    <p id="Text7" class="Text7"></p>
+    <p id="Text8" class="Text8"></p>
+    <p id="Text9" class="Text9"></p>
+    <p id="Text10" class="Text10"></p>
 
     <button id="PlayButton" class="PlayButton" onClick="ChooseCategory()">Play</button>
     <button id="ExitButton" class="PlayButton" onClick="Goodbye()">Exit</button>
     <p> </p>
-    <input id="fname" style = "display: none;" type="text" name="first-name" value="" placeholder="First Name"/> 
-    <input id="lname" style = "display: none;" type="text" name="last-name" value="" placeholder="Last Name"/>
-    <input id="submitName" type="submit" style = "display: none;" value="Submit" onclick="submitPlayer()">
 
 </main>
 
