--- a/mainHTML.html
+++ b/mainHTML.html
@@ -12,11 +12,13 @@
 <main>
     <p id="Text1" class="Text1">  Do you wish to play AFL Wordle</p>
     <p id="Text2" class="Text2"></p>
+    
     <input id="fname" style = "display: none;" type="text" name="first-name" value="" placeholder="First Name"/> 
     <input id="lname" style = "display: none;" type="text" name="last-name" value="" placeholder="Last Name"/>
     <input id="submitName" type="submit" style = "display: none;" value="Submit" onclick="submitPlayer()">
-    <p id="Text3" class="Text3"></p>
-    <p id="lineText" class="lineText"></p>
+   
+    <p id="lineText1" class="lineText1"></p>
+
     <p id="firstText" class="firstText"></p>
     <p id="lastText" class="lastText"></p>
     <p id="teamText" class="teamText"></p>
@@ -28,15 +30,17 @@
     <p id="recruitedText" class="recruitedText"></p>
     <p id="gamesText" class="gamesText"></p>
     <p id="goalsText" class="goalsText"></p>
-    <p id="Text5" class="Text5"></p>
-    <p id="Text4" class="Text4"></p>
-    <p id="Text6" class="Text6"></p>
-    <p id="Text7" class="Text7"></p>
-    <p id="Text8" class="Text8"></p>
-    <p id="Text9" class="Text9"></p>
-    <p id="Text10" class="Text10"></p>
 
-    <button id="PlayButton" class="PlayButton" onClick="ChooseCategory()">Play</button>
+    <p id="lineText2" class="lineText2"></p>
+
+    <p id="turn1Text" class="turn1Text"></p>
+    <p id="turn2Text" class="turn2Text"></p>
+    <p id="turn3Text" class="turn3Text"></p>
+    <p id="turn4Text" class="turn4Text"></p>
+    <p id="turn5Text" class="turn5Text"></p>
+    <p id="turn6Text" class="turn6Text"></p>
+
+    <button id="PlayButton" class="PlayButton" onClick="playGame()">Play</button>
     <button id="ExitButton" class="PlayButton" onClick="Goodbye()">Exit</button>
     <p> </p>
 
