Changed 2 text boxes to 1

--- a/mainHTML.html
+++ b/mainHTML.html
@@ -13,8 +13,7 @@
     <p id="Text1" class="Text1">  Do you wish to play AFL Wordle</p>
     <p id="Text2" class="Text2"></p>
     
-    <input id="fname" style = "display: none;" type="text" name="first-name" value="" placeholder="First Name"/> 
-    <input id="lname" style = "display: none;" type="text" name="last-name" value="" placeholder="Last Name"/>
+    <input id="fullName" style = "display: none;" type="text" name="full-name" value="" placeholder="Full Name"/> 
     <input id="submitName" type="submit" style = "display: none;" value="Submit" onclick="submitPlayer()">
    
     <p id="lineText1" class="lineText1"></p>
