--- a/mainHTML.html
+++ b/mainHTML.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <title>AFLordle</title>
+<link rel="stylesheet" href="AFLordleCSS.css">
 <script src="AFLordleJS.js"></script>
 
 </head>
