Added a bit of colour to the text

--- a/mainHTML.html
+++ b/mainHTML.html
@@ -23,17 +23,17 @@
    
     <p id="lineText1" class="lineText1"></p>
 
-    <p id="firstText" class="firstText"></p>
-    <p id="lastText" class="lastText"></p>
-    <p id="teamText" class="teamText"></p>
-    <p id="guernseyText" class="guernseyText"></p>
-    <p id="birthdayText" class="birthdayText"></p>
-    <p id="heightText" class="heightText"></p>
-    <p id="weightText" class="heightText"></p>
-    <p id="stateText" class="stateText"></p>
-    <p id="recruitedText" class="recruitedText"></p>
-    <p id="gamesText" class="gamesText"></p>
-    <p id="goalsText" class="goalsText"></p>
+    <p id="firstText" class="black"></p>
+    <p id="lastText" class="black"></p>
+    <p id="teamText" class="black"></p>
+    <p id="guernseyText" class="black"></p>
+    <p id="birthdayText" class="black"></p>
+    <p id="heightText" class="black"></p>
+    <p id="weightText" class="black"></p>
+    <p id="stateText" class="black"></p>
+    <p id="recruitedText" class="black"></p>
+    <p id="gamesText" class="black"></p>
+    <p id="goalsText" class="black"></p>
 
     <p id="lineText2" class="lineText2"></p>
 
