Made text box bigger and added shadow to text

--- a/mainHTML.html
+++ b/mainHTML.html
@@ -10,9 +10,9 @@
 <body>
 <h1>AFL Wordle</h1>
 <main>
-    <p id="Text1" class="Text1">  Do you wish to play AFL Wordle</p>
-    <p id="Text2" class="Text2"></p>
-    <p id="Text3" class="Text2"></p>
+    <p id="Text1" class="Text">  Do you wish to play AFL Wordle</p>
+    <p id="Text2" class="Text"></p>
+    <p id="Text3" class="Text"></p>
     
     <input id="fullName" style = "display: none;" type="text" name="full-name" value="" placeholder="Full Name"/> 
     <input id="submitName" type="submit" style = "display: none;" value="Submit" onclick="submitPlayer()">
