--- a/mainHTML.html
+++ b/mainHTML.html
@@ -24,21 +24,25 @@
 
     <table>
         <tr>
+            <th colspan="2">Player Name</th><th>Team</th><th>Guernsey</th><th>Birth Date</th><th>Height</th><th>State</th>
+        </tr>
+        <tr class="spacer"></tr>
+        <tr class = "tableBlocks">
             <td id = "t1a" class="black"></td><td id = "t1b" class="black"></td><td id = "t1c" class="black"></td><td id = "t1d" class="black"></td><td id = "t1e" class="black"></td><td id = "t1f" class="black"></td><td id = "t1g" class="black"></td>
         </tr>
-        <tr>
+        <tr class = "tableBlocks">
             <td id = "t2a" class="black"></td><td id = "t2b" class="black"></td><td id = "t2c" class="black"></td><td id = "t2d" class="black"></td><td id = "t2e" class="black"></td><td id = "t2f" class="black"></td><td id = "t2g" class="black"></td>
         </tr>
-        <tr>
+        <tr class = "tableBlocks">
             <td id = "t3a" class="black"></td><td id = "t3b" class="black"></td><td id = "t3c" class="black"></td><td id = "t3d" class="black"></td><td id = "t3e" class="black"></td><td id = "t3f" class="black"></td><td id = "t3g" class="black"></td>
         </tr>
-        <tr>
+        <tr class = "tableBlocks">
             <td id = "t4a" class="black"></td><td id = "t4b" class="black"></td><td id = "t4c" class="black"></td><td id = "t4d" class="black"></td><td id = "t4e" class="black"></td><td id = "t4f" class="black"></td><td id = "t4g" class="black"></td>
         </tr>
-        <tr>
+        <tr class = "tableBlocks">
             <td id = "t5a" class="black"></td><td id = "t5b" class="black"></td><td id = "t5c" class="black"></td><td id = "t5d" class="black"></td><td id = "t5e" class="black"></td><td id = "t5f" class="black"></td><td id = "t5g" class="black"></td>
         </tr>
-        <tr>
+        <tr class = "tableBlocks">
             <td id = "t6a" class="black"></td><td id = "t6b" class="black"></td><td id = "t6c" class="black"></td><td id = "t6d" class="black"></td><td id = "t6e" class="black"></td><td id = "t6f" class="black"></td><td id = "t6g" class="black"></td>
         </tr>
     </table>
