Updated stat popup - coming soon
Updated stat popup to show coming soon to prevent confusion

--- a/mainHTML.html
+++ b/mainHTML.html
@@ -49,12 +49,12 @@
 		<h2>Stats</h2>
 		<a class="close" href="#">&times;</a>
 		<div class="content">
-            <p>Average turns:</p>
-            <p>Win percentage:</p>
-            <p>Win streak:</p>
-            <p>Loss streak:</p>
-            <p>Max win streak:</p>
-            <p>Max loss streak:</p>
+            <p>Average turns: COMING SOON</p>
+            <p>Win percentage: COMING SOON</p>
+            <p>Win streak: COMING SOON</p>
+            <p>Loss streak: COMING SOON</p>
+            <p>Max win streak: COMING SOON</p>
+            <p>Max loss streak: COMING SOON</p>
 		</div>
 	</div>
 </div>
