--- a/mainHTML.html
+++ b/mainHTML.html
@@ -72,7 +72,7 @@
    
     <p id="lineText1" class="lineText1"></p>
 
-    <table>
+    <table class="table">
         <tr>
             <th colspan="2">Player Name</th><th>Team</th><th>Guernsey</th><th>Birth Date</th><th>Height</th><th>State</th>
         </tr>
