Added win percentage to stat page

--- a/mainHTML.html
+++ b/mainHTML.html
@@ -12,7 +12,7 @@
     <section>
           <span class="container">
             <span class="checkbox-container">
-              <input class="checkbox-trigger" type="checkbox"  />
+              <input class="checkbox-trigger" type="checkbox"/>
               <span class="menu-content">
                   <ul>
                     <li onclick="location.href = '#rules'">Rules</li>
@@ -49,12 +49,12 @@
 		<h2>Stats</h2>
 		<a class="close" href="#">&times;</a>
 		<div class="content">
-            <p>Average turns: COMING SOON</p>
-            <p>Win percentage: COMING SOON</p>
-            <p>Win streak: COMING SOON</p>
-            <p>Loss streak: COMING SOON</p>
-            <p>Max win streak: COMING SOON</p>
-            <p>Max loss streak: COMING SOON</p>
+            <p class="statistics">Average turns: COMING SOON</p>
+            <p class="statistics" id="winPercentage">Win percentage</p>
+            <p class="statistics">Win streak: COMING SOON</p>
+            <p class="statistics">Loss streak: COMING SOON</p>
+            <p class="statistics">Max win streak: COMING SOON</p>
+            <p class="statistics">Max loss streak: COMING SOON</p>
 		</div>
 	</div>
 </div>
@@ -96,19 +96,6 @@
             <td id = "t6a" class="black"></td><td id = "t6b" class="black"></td><td id = "t6c" class="black"></td><td id = "t6d" class="black"></td><td id = "t6e" class="black"></td><td id = "t6f" class="black"></td><td id = "t6g" class="black"></td>
         </tr>
     </table>
-
-
-
-    <p id="lineText2" class="lineText2"></p>
-
-    <p id="turn1Text" class="turn1Text"></p>
-    <p id="turn2Text" class="turn2Text"></p>
-    <p id="turn3Text" class="turn3Text"></p>
-    <p id="turn4Text" class="turn4Text"></p>
-    <p id="turn5Text" class="turn5Text"></p>
-    <p id="turn6Text" class="turn6Text"></p>
-
-    <p> </p>
 
 </main>
 
