--- a/mainHTML.html
+++ b/mainHTML.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>AFLordle</title>
+<title>AFL Wordle</title>
 <link rel="stylesheet" href="AFLordleCSS.css">
 <script src="AFLordleJS.js"></script>
 
@@ -74,7 +74,7 @@
 
     <table class="table">
         <tr>
-            <th colspan="2">Player Name</th><th>Team</th><th>Guernsey</th><th>Birth Date</th><th>Height</th><th>State</th>
+            <th colspan="2">Player Name</th><th>Team</th><th>State</th><th>Height</th><th>Birth Date</th><th>Guernsey</th>
         </tr>
         <tr class="spacer"></tr>
         <tr class = "tableBlocks">
