Added suggestions form

--- a/mainHTML.html
+++ b/mainHTML.html
@@ -17,6 +17,7 @@
                   <ul>
                     <li onclick="location.href = '#rules'">Rules</li>
                     <li onclick="location.href = '#stats'">Stats</li>
+                    <li onclick="window.open('https://forms.gle/BxZnXcH5fx6jaTiV7')">Suggestions</li>
                   </ul>
                 <span class="hamburger-menu"></span>
               </span>
@@ -58,6 +59,8 @@
 		</div>
 	</div>
 </div>
+
+
 
     <h1>AFL Wordle</h1>
     <p id="Text1" class="Text">  Do you wish to play AFL Wordle</p>
