--- a/mainHTML.html
+++ b/mainHTML.html
@@ -52,7 +52,7 @@
 		<div class="content">
             <p class="statistics">Average turns: COMING SOON</p>
             <p class="statistics" id="winPercentage">Win percentage</p>
-            <p class="statistics">Win streak: COMING SOON</p>
+            <p class="statistics" id = "winStreak">Win streak: COMING SOON</p>
             <p class="statistics">Loss streak: COMING SOON</p>
             <p class="statistics">Max win streak: COMING SOON</p>
             <p class="statistics">Max loss streak: COMING SOON</p>
