Added max streak

--- a/mainHTML.html
+++ b/mainHTML.html
@@ -54,7 +54,7 @@
             <p class="statistics" id="winPercentage">Win percentage</p>
             <p class="statistics" id = "winStreak">Win streak: COMING SOON</p>
             <p class="statistics">Loss streak: COMING SOON</p>
-            <p class="statistics">Max win streak: COMING SOON</p>
+            <p class="statistics" id = "maxWinStreak">Max win streak: COMING SOON</p>
             <p class="statistics">Max loss streak: COMING SOON</p>
 		</div>
 	</div>
